Fixing textbox appearance on mobile, to remove excess padding

--- a/sass/controls.scss
+++ b/sass/controls.scss
@@ -7,6 +7,7 @@ input[type='text'] {
   font-size: 1.20rem;
   font-weight: 300;
   color: $black;
+  padding: 0;
 }
 
 input[type='radio'] {
